* Support uint8 index buffers in DX9
* Fix occasional frame lag when loading a big model asynchronously
* Fix interrogate parsing issue with "const static"
* Add back missing libp3pystub.a to Mac OS X SDK
* Fix RAM caching of 2D texture arrays
* Fix Ctrl+C interrupt propagation to runtime applications
* Support for InvSphere, Box and Tube solids in bam2egg
* Add normalized() method to vectors
* asyncFlattenStrong with inPlace=True caused node to disappear
* Fix asyncFlattenStrong called on nodes without parent
* Fix is_playing() check when playing an animation backwards
* Windows installer no longer clears %PATH% if longer than 1024 chars
* Fix inoperative -tbn/-tbnall/-tbnauto options in egg-optchar
* Fix tinydisplay texture errors on shutdown
* Fix mipmap filtering issues in tinydisplay renderer
* Fix exception when creating intervals before ShowBase is started
* Fix rare X11 .ico cursor bug; also now supports PNG-compressed icons
* Add keyword argument support to make() methods such as Shader.make()
* Fix compilation errors with Bullet 2.84

------------------------  RELEASE 1.9.2  ------------------------

This is a minor bugfix release, fixing a few minor issues that
remained in the 1.9.1 release, including:

* Fix compile errors with more recent versions of ffmpeg
* Include .lib files for pyd modules in Windows SDK
* packp3d now recognizes default egg-object-type definitions
* Fix issues with sphere-into-box and box-into-sphere collisions
* Texture VRAM usage is now correctly reported by pstats
* Support for reading BMP files with alpha channel
* Fix OpenGL crashes in very ancient OpenGL versions
* Fix rare compile issues and crashes with esoteric Python set-ups
* Fix crash when extracting texture that's not a multiple of 4 bytes
* Work around buggy NVIDIA driver that reports _main_* shader inputs
* Add version of transform_vertices that accepts a SparseArray
* Clamp shininess to 0 to avoid GL error when shininess < 0